M : fix overflow

--- a/Lunggo.CustomerWeb/Assets/mobile/css/_page_hotel.scss
+++ b/Lunggo.CustomerWeb/Assets/mobile/css/_page_hotel.scss
@@ -1,4 +1,5 @@
-﻿.page-hotel {
+﻿&.page-hotel.no-scroll {overflow: auto !important;}
+.page-hotel {
     /*General*/
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
